src/css/styles.css
/* ... */
.date {
  font-weight: 700;
  text-align: center;
  font-size: 55px;
}

.time {
  font-weight: 700;
  text-align: center;
  font-size: 85px;
  margin-bottom: -10px;
  margin-top: -30px;
}

.time span {
  color: var(--sat-accent-color1);
  animation: blinker 1s linear infinite;
}

/* New blinker effect! */

@keyframes blinker {
  50% {
    opacity: 0;
  }
}

/* 
========
+ Setting title + 
========
*/

.settings-title {
  font-weight: 700;
  font-size: 1.5em;
  text-align: left;
  padding: 20px;
  margin-top: 15px;
}

/* 
========
+ The modal itself +
========
*/

.fav_modal {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  visibility: hidden;
  transition: visibility 0s linear 150ms, opacity 150ms 0s, transform 150ms;
  /*=== Effect 1 ===*/
  transform: translateY(10%);
  z-index: 2;
}

.favorites_modal_content {
  /* Modal */
  position: absolute;
  top: 50%;
  left: 50%;
  padding: 10px 15px;
  transform: translate(-50%, -50%);
  overflow-y: auto;
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.37);
  border: 1px solid var(--settings-button-outline);
}

/* Modal border radius */
.favorites_modal_content {
  width: 35rem;
  height: 23rem;
  border-radius: 20px;
}

.show-favorite-modal {
  opacity: 1;
  visibility: visible;
  transition: visibility 0s linear 0s, opacity 150ms 0s, transform 150ms;
  /*=== Effect 1 ===*/
  transform: translateY(0);
}

/* 
========
+ Everything switch related +
========
*/

/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
  display: flex;
  justify-content: flex-end;
  margin-left: auto;
  margin-right: 0;
  margin-top: -25px;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--lighter-color);
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: #fff;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

input:checked + .slider {
  background-color: var(--sat-accent-color1);
}

input:focus + .slider {
  box-shadow: 0 0 1px var(--sat-accent-color1);
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

.control-button:hover {
  transition: var(--transition-speed-fast);
  outline: 4px solid var(--settings-button-outline);
}

/* 
========
+ App list v2.5 +
========
*/

#apps {
  margin-bottom: 15px;
  margin-top: 20px;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: center;
}

.app {
  margin: 4px;
  padding: 15px 45px;
  border-radius: 20px;
  border: 3px solid transparent;
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
  transition: all 0.3s ease;
  right: 5%;
}

.app:hover {
  background-color: var(--sat-accent-color1);

}

.app i {
  font-size: 2.3rem;
  right: 100%;
}

/* 
========
+ Apps list & apps text +
========
*/
.app {
  position: relative;
  display: inline-block;
}

.app span {
  font-size: 16px;
  font-weight: 600;
  margin: 0;
  position: absolute;
  top: 49%;
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 40%;
}

.app svg {
  margin: 0;
  position: absolute;
  top: 49%;
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 40%;
}

.app i {
  position: relative;
  bottom: 108%;
}

.page-content,
.app-content {
  display: none;
}

.page-content.current,
.app-content.current {
  display: inherit;
}

/* 
========
+ The iOS 15 like background in settings. +
========
*/

.settings-background {
  padding: 10px;
  margin: 5px;
  background: var(--sat-setting-bg-effect);
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
  border-radius: 10px;
}

.settings-background-warning {
  padding: 10px;
  background: #ffcc00;
  color: #333333;
  border-radius: 12px;
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
}

/* 
========
+ Theme Icons (No longer figma made, instead we're using a screenshot of the theme) +
========
*/

.theme-icon {
  margin: -1.5px;
  border-radius: 13px;
  height: 4.3rem;
  margin-bottom: 0.1px;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
}

div.theme-container {
  display: table;
  padding: 2.5px 0px;
  margin: 2px;
  border-radius: var(--sat-border-radius);
  display: inline-block;
  text-align: center;
  border: 2px solid var(--lighter-color);
  cursor: pointer;
  background-color: var(--lighter-color);
}

.theme-container:hover {
  color: var(--sat-accent-color1);
  transition: var(--transition-speed-default);
  background-color: var(--bg-accent-color-lr-hover);
  border: 2px solid var(--sat-accent-color1);
}

.theme-name {
  display: block;
  font-weight: 600;
  font-size: 14px;
  margin-top: -0.5px;
}

.theme-title {
  font-weight: 500;
  margin: 5px;
}

/* 
========
+ The save button for username feature +
========
*/

.save-button {
  padding: 10px 15px;
  background: var(--lighter-color);
  color: var(--sat-ids);
  font-size: 15px;
  border-radius: 13px;
}

.loading-svg {
  width: 40px;
  height: 35px;
  display: inline;
  position: relative;
  top: 0.1em;
  margin: -10px;
}

.save-button:hover {
  background: var(--sat-accent-color1);
  transition: var(--transition-speed-default);
}



/* 
========
+ The where to next text inside more apps. (top middle one) +
========
*/
.username-section input {
  background-color: var(--lighter-color);
  padding: 12px;
  width: 100%;
}

/* 
========
+ Consistent UI / Input bars +
========
*/

.favorites-search input,
.username-section input {
  border: 2px solid transparent;
}
/* ... */

